improve code block readability and fix note title not being changed

--- a/src/shared/ui/text-editor/styles.css
+++ b/src/shared/ui/text-editor/styles.css
@@ -56,20 +56,21 @@
 }
 
 pre {
-  background: rgb(30, 30, 30);
+  /* background: rgb(30, 30, 30); */
+  background: var(--color-muted);
   border-radius: 0.5rem;
-  color: var(--color-accent);
+  /* color: var(--color-accent); */
   font-family: inherit;
   /* font-family: "JetBrainsMono", monospace; */
   margin: 1rem 0;
   padding: 0.75rem 1rem;
 
-  code {
+  /* code {
     background: none;
     color: inherit;
     font-size: 0.8rem;
     padding: 0;
-  }
+  } */
 
   .hljs {
     color: #abb2bf;
